# asr-arena

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  asr-arena.service  nginx.conf.example  pyproject.toml
backend/: audio_utils.py  cer_utils.py  key_crypto.py  main.py  rate_limit.py  test_engines.py
backend/engines/: __init__.py  ali_dashscope.py  baidu.py  base.py  tencent.py  volcengine_seedasr.py  xunfei.py
docs/: deploy.md
frontend/: api-keys.js  app.js  index.html  recorder.js  style.css
samples/: tts_long_75s.txt  tts_standard.txt
